--- a/pom.xml
+++ b/pom.xml
@@ -63,28 +63,10 @@
 				<artifactId>jakarta.xml.bind-api</artifactId>
 				<version>3.0.1</version>
 			</dependency>
-
-<!--			<dependency>-->
-<!--				<groupId>org.postgresql</groupId>-->
-<!--				<artifactId>postgresql</artifactId>-->
-<!--				<version>42.7.5</version>-->
-<!--			</dependency>-->
-
-			<dependency>
-				<groupId>org.hibernate</groupId>
-				<artifactId>hibernate-core-jakarta</artifactId>
-				<version>5.6.11.Final</version>
-			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
 	<dependencies>
-		<dependency>
-			<groupId>org.postgresql</groupId>
-			<artifactId>postgresql</artifactId>
-			<version>42.7.5</version>
-		</dependency>
-
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core-jakarta</artifactId>
@@ -125,7 +107,7 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
-			<version>2.13.4</version>
+			<version>2.13.4.2</version>
 		</dependency>
 
 		<dependency>
@@ -138,6 +120,24 @@
 			<groupId>org.thymeleaf</groupId>
 			<artifactId>thymeleaf-spring5</artifactId>
 			<version>3.0.15.RELEASE</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.7.5</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core-jakarta</artifactId>
+			<version>5.6.11.Final</version>
+		</dependency>
+
+		<dependency>
+			<groupId>p6spy</groupId>
+			<artifactId>p6spy</artifactId>
+			<version>3.9.1</version>
 		</dependency>
 	</dependencies>
 
